--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 
         <script>
         var req = new XMLHttpRequest();
-        var url = "https://api.qrserver.com/v1/create-qr-code/?data=HelloWorld&size=100x100";
+        var url = "https://dreamguys.co.in/smarthr/rtl/assets/img/placeholder.png";
 
         req.onreadystatechange = function(){
             if (req.readyState === 4){
